answers/exercise8.txt
chiriac@Chiriac:~$ docker container ls\
>
CONTAINER ID   IMAGE     COMMAND                  CREATED          STATUS          PORTS                                           NAMES
58b389fd8651   mongo     "docker-entrypoint.s…"   52 seconds ago   Up 51 seconds   0.0.0.0:3456->27017/tcp, [::]:3456->27017/tcp   todo-backend-mongo-1
chiriac@Chiriac:~$ docker exec -it todo-backend-mongo-1 bash
root@58b389fd8651:/# mongosh
Current Mongosh Log ID: 69d37de0c8ba29afda44ba88
Connecting to:          mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.8.2
Using MongoDB:          undefined
Using Mongosh:          2.8.2

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/


To help improve our products, anonymous usage data is collected and sent to MongoDB periodically (https://www.mongodb.com/legal/privacy-policy).
You can opt-out by running the disableTelemetry() command.

test> -u root -p example
Uncaught:
SyntaxError: Missing semicolon. (1:2)

> 1 | -u root -p example
    |   ^
  2 |

test> exit
root@58b389fd8651:/# mongosh -u root -p example
Current Mongosh Log ID: 69d37e139e76b8094444ba88
Connecting to:          mongodb://<credentials>@127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.8.2
Using MongoDB:          8.2.6
Using Mongosh:          2.8.2

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/

------
   The server generated these startup warnings when booting
   2026-04-06T09:31:55.975+00:00: Using the XFS filesystem is strongly recommended with the WiredTiger storage engine. See http://dochub.mongodb.org/core/prodnotes-filesystem
   2026-04-06T09:31:56.456+00:00: For customers running the current memory allocator, we suggest changing the contents of the following sysfsFile
   2026-04-06T09:31:56.457+00:00: For customers running the current memory allocator, we suggest changing the contents of the following sysfsFile
   2026-04-06T09:31:56.457+00:00: We suggest setting the contents of sysfsFile to 0.
   2026-04-06T09:31:56.457+00:00: We suggest setting swappiness to 0 or 1, as swapping can cause performance problems.
------

test> show dbs
admin         100.00 KiB
config         12.00 KiB
local          72.00 KiB
the_database   56.00 KiB
test> use the_database
switched to db the_database
the_database> show collections
todos
the_database> db.todos.find({})
[
  {
    _id: ObjectId('69d37437a98596033444ba89'),
    text: 'Write C# Code',
    done: true
  },
  {
    _id: ObjectId('69d37437a98596033444ba8a'),
    text: 'Learn about containers',
    done: false
  }
]
the_database> db.collection.insertOne({text:"Do excercise 8", "done": true})
{
  acknowledged: true,
  insertedId: ObjectId('69d37eb29e76b8094444ba89')
}
the_database> db.todos.find({})
[
  {
    _id: ObjectId('69d37437a98596033444ba89'),
    text: 'Write C# Code',
    done: true
  },
  {
    _id: ObjectId('69d37437a98596033444ba8a'),
    text: 'Learn about containers',
    done: false
  }
]
the_database> db.collection.insertOne({text:"Do excercise 8", done: true})
{
  acknowledged: true,
  insertedId: ObjectId('69d37ecb9e76b8094444ba8a')
}
the_database> db.todos.find({})
[
  {
    _id: ObjectId('69d37437a98596033444ba89'),
    text: 'Write C# Code',
    done: true
  },
  {
    _id: ObjectId('69d37437a98596033444ba8a'),
    text: 'Learn about containers',
    done: false
  }
]
the_database> show collections
collection
todos
the_database> db.collection.drop()
true
the_database> show collections
todos
the_database> db.todos.insertOne({text:"Do excercise 8", done: true})
{
  acknowledged: true,
  insertedId: ObjectId('69d37f539e76b8094444ba8b')
}
the_database> db.todos.find({})
[
  {
    _id: ObjectId('69d37437a98596033444ba89'),
    text: 'Write C# Code',
    done: true
  },
  {
    _id: ObjectId('69d37437a98596033444ba8a'),
    text: 'Learn about containers',
    done: false
  },
  {
    _id: ObjectId('69d37f539e76b8094444ba8b'),
    text: 'Do excercise 8',
    done: true
  }
]